--- a/GHISA_Visualization.ipynb
+++ b/GHISA_Visualization.ipynb
@@ -36,7 +36,7 @@
       },
       "outputs": [],
       "source": [
-        "%%capture\n",
+        "#%%capture\n",
         "\n",
         "# if on Google CoLab, install packages into base environment \n",
         "import os\n",
@@ -60,7 +60,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 74,
+      "execution_count": null,
       "id": "7af12a37-368d-4696-a27f-56f7318d906e",
       "metadata": {
         "cellView": "form",
