--- a/GHISA_Visualization.ipynb
+++ b/GHISA_Visualization.ipynb
@@ -440,8 +440,6 @@
         "#@title 4. Generate Dataframe from User Selection\n",
         "#@markdown Creates a dataframe and populates it with data only fitting user selection.\n",
         "\n",
-        "#@markdown Selected data will be exported as a CSV file which can be downloaded. To access the CSV file, go to the menu on the left hand of the screen, select 'Files', and double click 'selected_data' to download.\n",
-        "\n",
         "#@markdown Run for each new query.\n",
         "\n",
         "new_df = core_data\n",
@@ -481,7 +479,7 @@
         "if (country_radio_group.value != ['All']):\n",
         "    new_df = new_df[new_df['Country'].isin(country_radio_group.value)]\n",
         "\n",
-        "new_df.to_csv('selected_data')\n",
+        "#new_df.to_csv('selected_data')\n",
         "hv.extension('bokeh')\n",
         "\n",
         "new_df['Reflectance'] = new_df['Reflectance'].astype('float')\n",
