added maps and updated average plot titles

--- a/GHISA_Visualization.ipynb
+++ b/GHISA_Visualization.ipynb
@@ -70,14 +70,14 @@
       },
       "outputs": [],
       "source": [
-        "#%%capture\n",
+        "%%capture\n",
         "\n",
         "# if on Google CoLab, install packages into base environment \n",
         "import os\n",
         "if 'COLAB_GPU' in list(os.environ):\n",
         "\n",
         "    #@title 1. First Time Requirement Installation\n",
-        "    #@markdown Downloads and installs required packages. Click 'Restart Runtime' once complete. (~1 minute)\n",
+        "    #@markdown Downloads and installs required packages. Click 'Runtime > Restart Runtime' once complete. (~1 minute)\n",
         "    #First time setup - Installs all required components\n",
         "    !pip install geemap -U &> /dev/null\n",
         "    !pip install ipyleaflet -U &> /dev/null\n",
@@ -86,8 +86,9 @@
         "    !pip install npm -U &> /dev/null\n",
         "    !pip install panel -U &> /dev/null\n",
         "    !pip install hvplot -U &> /dev/null\n",
-        "    #!pip uninstall tornado -y\n",
         "    !pip install tornado==5.1.1 -U &> /dev/null\n",
+        "    !pip install geemap -U &> /dev/null\n",
+        "    !pip install geopandas -U &> /dev/null\n",
         "\n",
         "    # RESTART KERNEL AFTER THIS CODE HAS BEEN RUN"
       ]
@@ -108,22 +109,11 @@
         "import pandas as pd\n",
         "import numpy as np\n",
         "import geopy\n",
-        "#import geemap\n",
+        "import geemap\n",
+        "import ee\n",
         "import panel as pn\n",
         "import hvplot.pandas\n",
         "import holoviews as hv\n",
-        "\n",
-        "## CODE FOR MAP - NOT IMPLEMENTED ##\n",
-        "\n",
-        "#from bokeh.models import SingleIntervalTicker, LinearAxis\n",
-        "#from holoviews import opts\n",
-        "#hv.extension('bokeh')\n",
-        "#from pygeocoder import Geocoder\n",
-        "#from IPython.display import display\n",
-        "\n",
-        "#Cleanup data for mapping. (Map does not need spectrum data)\n",
-        "#Map_DF = pd.read_csv(r'GHISA-USA-EO-1-Hyperion-data-of-crops-1h_gaezs.csv')\n",
-        "#Map_DF = Map_DF.drop(Map_DF.iloc[:, 12:-2], axis=1)\n",
         "\n",
         "#Begin importing data\n",
         "core_data = pd.read_csv(r'https://raw.githubusercontent.com/rmccormick-contractor/Hyperion-ASD-Visualization/main/Croplands_DataViz/asd_long.csv', \n",
@@ -588,31 +578,35 @@
         "#asd_df = asd_df.groupby(['Crop', 'Wavelength', 'Sensor'])['Reflectance'].mean()\n",
         "\n",
         "if (asd_df.empty == False):\n",
-        "    test = asd_df['Crop'].unique()\n",
-        "    test = sorted(test)\n",
+        "    asd_crops = asd_df['Crop'].unique()\n",
+        "    asd_crops = sorted(asd_crops)\n",
+        "    asd_crops_name=\", \".join(map(str,asd_crops))\n",
         "    asd_color_list = list()\n",
-        "    for crop in test:\n",
+        "    for crop in asd_crops:\n",
         "        asd_color_list.append(colors_dic[crop])\n",
         "\n",
         "if (hyperion_df.empty == False):\n",
-        "    test = hyperion_df['Crop'].unique()\n",
-        "    test = sorted(test)\n",
+        "    hyp_crops = hyperion_df['Crop'].unique()\n",
+        "    hyp_crops = sorted(hyp_crops)\n",
+        "    hyp_crops_name=\", \".join(map(str,hyp_crops))\n",
         "    hyp_color_list = list()\n",
-        "    for crop in test:\n",
+        "    for crop in hyp_crops:\n",
         "        hyp_color_list.append(colors_dic[crop])\n",
         "\n",
         "if (desis_df.empty == False):\n",
-        "    test = desis_df['Crop'].unique()\n",
-        "    test = sorted(test)\n",
+        "    desis_crops = desis_df['Crop'].unique()\n",
+        "    desis_crops = sorted(desis_crops)\n",
+        "    desis_crops_name=\", \".join(map(str,desis_crops))\n",
         "    desis_color_list = list()\n",
-        "    for crop in test:\n",
+        "    for crop in desis_crops:\n",
         "        desis_color_list.append(colors_dic[crop])\n",
         "\n",
         "if (prisma_df.empty == False):\n",
-        "    test = prisma_df['Crop'].unique()\n",
-        "    test = sorted(test)\n",
+        "    prisma_crops = prisma_df['Crop'].unique()\n",
+        "    prisma_crops = sorted(prisma_crops)\n",
+        "    prisma_crops_name=\", \".join(map(str,prisma_crops))\n",
         "    prisma_color_list = list()\n",
-        "    for crop in test:\n",
+        "    for crop in prisma_crops:\n",
         "        prisma_color_list.append(colors_dic[crop])\n",
         "\n",
         "asd_df = asd_df.groupby(['Crop', 'Wavelength'])['Reflectance'].mean()\n",
@@ -621,18 +615,18 @@
         "unique_selected_sensors = list()\n",
         "\n",
         "if (asd_df.empty == False):\n",
-        "    asd_plot = asd_df.hvplot.line(x = \"Wavelength\",\n",
-        "                                  y = \"Reflectance\",\n",
-        "                                  by='Crop', \n",
-        "                                  title='Average Reflectance (ASD Spectroradiometer)', \n",
-        "                                  ylabel='Surface Reflectance (%)',\n",
-        "                                  xlabel='Wavelength (nm)',\n",
-        "                                  line_color = asd_color_list).opts(fontsize={'title': 16, \n",
-        "                                                                          'labels': 14, \n",
-        "                                                                          'yticks': 12},\n",
-        "                                                                xrotation=45,\n",
-        "                                                                xticks=15)\n",
-        "    unique_selected_sensors.append(asd_plot)\n",
+        "  asd_plot = asd_df.hvplot.line(x = \"Wavelength\",\n",
+        "                                y = \"Reflectance\",\n",
+        "                                by='Crop', \n",
+        "                                title='Average Reflectance (ASD Spectroradiometer): ' + asd_crops_name, \n",
+        "                                ylabel='Surface Reflectance (%)',\n",
+        "                                xlabel='Wavelength (nm)',\n",
+        "                                line_color = asd_color_list).opts(fontsize={'title': 16, \n",
+        "                                                                        'labels': 14, \n",
+        "                                                                        'yticks': 12},\n",
+        "                                                              xrotation=45,\n",
+        "                                                              xticks=15)\n",
+        "  unique_selected_sensors.append(asd_plot)\n",
         "\n",
         "hyperion_df = hyperion_df.groupby(['Crop', 'Wavelength'])['Reflectance'].mean()\n",
         "hyperion_df = hyperion_df.dropna()\n",
@@ -641,7 +635,7 @@
         "    hyperion_plot = hyperion_df.hvplot.line(x = \"Wavelength\",\n",
         "                                            y = \"Reflectance\",\n",
         "                                            by=['Crop'], \n",
-        "                                            title='Average Reflectance (EO1-Hyperion)', \n",
+        "                                            title='Average Reflectance (EO1-Hyperion): ' + hyp_crops_name, \n",
         "                                            ylabel='Surface Reflectance (%)', \n",
         "                                            xlabel='Wavelength (nm)', \n",
         "                                            line_color=hyp_color_list).opts(fontsize={'title': 16, \n",
@@ -658,7 +652,7 @@
         "    desis_plot = desis_df.hvplot.line(x = \"Wavelength\",\n",
         "                                            y = \"Reflectance\",\n",
         "                                            by=['Crop'], \n",
-        "                                            title='Average Reflectance (DESIS)', \n",
+        "                                            title='Average Reflectance (DESIS): ' + desis_crops_name, \n",
         "                                            ylabel='Surface Reflectance (%)', \n",
         "                                            xlabel='Wavelength (nm)', \n",
         "                                            line_color=desis_color_list).opts(fontsize={'title': 16, \n",
@@ -675,7 +669,7 @@
         "    prisma_plot = prisma_df.hvplot.line(x = \"Wavelength\",\n",
         "                                            y = \"Reflectance\",\n",
         "                                            by=['Crop'], \n",
-        "                                            title='Average Reflectance (PRISMA)', \n",
+        "                                            title='Average Reflectance (PRISMA): ' + prisma_crops_name, \n",
         "                                            ylabel='Surface Reflectance (%)', \n",
         "                                            xlabel='Wavelength (nm)', \n",
         "                                            line_color=prisma_color_list).opts(fontsize={'title': 16, \n",
@@ -721,6 +715,36 @@
         "mean_plot = mean_df.hvplot.line(x = \"Wavelength\",y = \"Reflectance\",by='Sensor', groupby='Crop', widget_location='top_right', title='Average Reflectance', ylabel='Surface Reflectance (%)', xlabel='Wavelength (nm)')\n",
         "mean_plot"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#@title 8. Map Selected Data\n",
+        "#@markdown Create an interactive map plotting all selected data.\n",
+        "\n",
+        "Map = geemap.Map()\n",
+        "\n",
+        "uniqueValues = new_df['MasterID'].unique()\n",
+        "map_df = new_df.loc[(new_df['MasterID'].isin(uniqueValues))]\n",
+        "map_df = map_df.dropna(subset=['Long'])\n",
+        "map_df = map_df.dropna(subset=['Lat'])\n",
+        "#map_df.drop(['FID', 'Global_AEZ', 'PlotID', 'UniqueID', 'Image', 'JulianDay'], axis=1, inplace=True)\n",
+        "\n",
+        "map_df = map_df.drop_duplicates(subset=\"MasterID\")\n",
+        "map_df.drop(['Reflectance', 'Wavelength', 'UniqueID', 'FID'], axis=1, inplace=True)\n",
+        "map_df = map_df.reset_index()\n",
+        "\n",
+        "Map.add_points_from_xy(map_df, x=\"Long\", y=\"Lat\")\n",
+        "\n",
+        "Map"
+      ],
+      "metadata": {
+        "cellView": "form",
+        "id": "AQ_XA2MsEH6I"
+      },
+      "id": "AQ_XA2MsEH6I",
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
