--- a/GHISA_Visualization.ipynb
+++ b/GHISA_Visualization.ipynb
@@ -89,6 +89,9 @@
         "    !pip install tornado==5.1.1 -U &> /dev/null\n",
         "    !pip install geemap -U &> /dev/null\n",
         "    !pip install geopandas -U &> /dev/null\n",
+        "    !pip install geoviews -U &> /dev/null\n",
+        "    !pip uninstall shapely -U &> /dev/null\n",
+        "    !pip install shapely --no-binary shapely -U &> /dev/null\n",
         "\n",
         "    # RESTART KERNEL AFTER THIS CODE HAS BEEN RUN"
       ]
@@ -114,6 +117,8 @@
         "import panel as pn\n",
         "import hvplot.pandas\n",
         "import holoviews as hv\n",
+        "import geopandas as gpd\n",
+        "import geoviews as gv\n",
         "\n",
         "#Begin importing data\n",
         "core_data = pd.read_csv(r'https://raw.githubusercontent.com/rmccormick-contractor/Hyperion-ASD-Visualization/main/Croplands_DataViz/asd_long.csv', \n",
@@ -138,6 +143,8 @@
         "core_data = pd.concat([core_data, new_df4])\n",
         "core_data = pd.concat([core_data, new_df5])\n",
         "core_data = pd.concat([core_data, new_df6])\n",
+        "\n",
+        "core_data['Reflectance'] = core_data['Reflectance'].fillna(0)\n",
         "\n",
         "# DESIS Data\n",
         "desis1_df = pd.read_csv(r'https://raw.githubusercontent.com/rmccormick-contractor/Hyperion-ASD-Visualization/main/Croplands_DataViz/GHISA-DESIS-Data/Part1-desis_ghisa_vis_long.csv', \n",
@@ -553,7 +560,7 @@
         "\n",
         "\n",
         "#test_df['Reflectance'] = test_df['Reflectance'].dropna()\n",
-        "test_df['crop-sensor'] = test_df[['Crop','Sensor']].agg(' - '.join, axis=1)\n",
+        "#test_df['crop-sensor'] = test_df[['Crop','Sensor']].agg(' - '.join, axis=1)\n",
         "\n",
         "colors_dic =  {\n",
         "    \"Alfalfa\" : \"violet\",\n",
@@ -570,6 +577,8 @@
         "    \"Winter wheat\": \"tan\"\n",
         "}\n",
         "\n",
+        "\n",
+        "\n",
         "asd_df = test_df.loc[(test_df['Sensor'].values == \"ASD Spectroradiometer\")]\n",
         "hyperion_df = test_df.loc[(test_df['Sensor'].values == \"Hyperion\")]\n",
         "desis_df = test_df.loc[(test_df['Sensor'].values == \"DESIS\")]\n",
@@ -580,7 +589,16 @@
         "if (asd_df.empty == False):\n",
         "    asd_crops = asd_df['Crop'].unique()\n",
         "    asd_crops = sorted(asd_crops)\n",
+        "\n",
+        "    for crop in asd_df['Crop'].unique():\n",
+        "      n = 0\n",
+        "      new_test_df = asd_df[asd_df['Crop'].isin([crop])]\n",
+        "      n = len(new_test_df[\"MasterID\"].unique())\n",
+        "      asd_df.loc[asd_df['Crop'] == crop, 'Crop'] = str(crop) + \" (n = \" + str(n) + \")\"\n",
+        "\n",
         "    asd_crops_name=\", \".join(map(str,asd_crops))\n",
+        "    if (len(asd_crops) == 1):\n",
+        "      asd_crops_name += \" (n = \" + str(len(asd_df['MasterID'].unique())) + \")\"\n",
         "    asd_color_list = list()\n",
         "    for crop in asd_crops:\n",
         "        asd_color_list.append(colors_dic[crop])\n",
@@ -588,7 +606,16 @@
         "if (hyperion_df.empty == False):\n",
         "    hyp_crops = hyperion_df['Crop'].unique()\n",
         "    hyp_crops = sorted(hyp_crops)\n",
+        "\n",
+        "    for crop in hyperion_df['Crop'].unique():\n",
+        "      n = 0\n",
+        "      new_test_df = hyperion_df[hyperion_df['Crop'].isin([crop])]\n",
+        "      n = len(new_test_df[\"MasterID\"].unique())\n",
+        "      hyperion_df.loc[hyperion_df['Crop'] == crop, 'Crop'] = str(crop) + \" (n = \" + str(n) + \")\"\n",
+        "\n",
         "    hyp_crops_name=\", \".join(map(str,hyp_crops))\n",
+        "    if (len(hyp_crops) == 1):\n",
+        "      hyp_crops_name += \" (n = \" + str(len(hyperion_df['MasterID'].unique())) + \")\"\n",
         "    hyp_color_list = list()\n",
         "    for crop in hyp_crops:\n",
         "        hyp_color_list.append(colors_dic[crop])\n",
@@ -596,7 +623,16 @@
         "if (desis_df.empty == False):\n",
         "    desis_crops = desis_df['Crop'].unique()\n",
         "    desis_crops = sorted(desis_crops)\n",
+        "\n",
+        "    for crop in desis_df['Crop'].unique():\n",
+        "      n = 0\n",
+        "      new_test_df = desis_df[desis_df['Crop'].isin([crop])]\n",
+        "      n = len(new_test_df[\"MasterID\"].unique())\n",
+        "      desis_df.loc[desis_df['Crop'] == crop, 'Crop'] = str(crop) + \" (n = \" + str(n) + \")\"\n",
+        "\n",
         "    desis_crops_name=\", \".join(map(str,desis_crops))\n",
+        "    if (len(desis_crops) == 1):\n",
+        "      desis_crops_name += \" (n = \" + str(len(desis_df['MasterID'].unique())) + \")\"\n",
         "    desis_color_list = list()\n",
         "    for crop in desis_crops:\n",
         "        desis_color_list.append(colors_dic[crop])\n",
@@ -604,7 +640,16 @@
         "if (prisma_df.empty == False):\n",
         "    prisma_crops = prisma_df['Crop'].unique()\n",
         "    prisma_crops = sorted(prisma_crops)\n",
+        "\n",
+        "    for crop in prisma_df['Crop'].unique():\n",
+        "      n = 0\n",
+        "      new_test_df = prisma_df[prisma_df['Crop'].isin([crop])]\n",
+        "      n = len(new_test_df[\"MasterID\"].unique())\n",
+        "      prisma_df.loc[prisma_df['Crop'] == crop, 'Crop'] = str(crop) + \" (n = \" + str(n) + \")\"\n",
+        "\n",
         "    prisma_crops_name=\", \".join(map(str,prisma_crops))\n",
+        "    if (len(prisma_crops) == 1):\n",
+        "      prisma_crops_name += \" (n = \" + str(len(prisma_df['MasterID'].unique())) + \")\"\n",
         "    prisma_color_list = list()\n",
         "    for crop in prisma_crops:\n",
         "        prisma_color_list.append(colors_dic[crop])\n",
@@ -617,7 +662,7 @@
         "if (asd_df.empty == False):\n",
         "  asd_plot = asd_df.hvplot.line(x = \"Wavelength\",\n",
         "                                y = \"Reflectance\",\n",
-        "                                by='Crop', \n",
+        "                                by= ['Crop'], \n",
         "                                title='Average Reflectance (ASD Spectroradiometer): ' + asd_crops_name, \n",
         "                                ylabel='Surface Reflectance (%)',\n",
         "                                xlabel='Wavelength (nm)',\n",
@@ -722,21 +767,21 @@
         "#@title 8. Map Selected Data\n",
         "#@markdown Create an interactive map plotting all selected data.\n",
         "\n",
-        "Map = geemap.Map()\n",
+        "#@markdown (In development - Check back later!)\n",
+        "\n",
+        "from bokeh.io import output_notebook\n",
+        "\n",
+        "gv.extension('bokeh')\n",
         "\n",
         "uniqueValues = new_df['MasterID'].unique()\n",
         "map_df = new_df.loc[(new_df['MasterID'].isin(uniqueValues))]\n",
         "map_df = map_df.dropna(subset=['Long'])\n",
-        "map_df = map_df.dropna(subset=['Lat'])\n",
         "#map_df.drop(['FID', 'Global_AEZ', 'PlotID', 'UniqueID', 'Image', 'JulianDay'], axis=1, inplace=True)\n",
         "\n",
         "map_df = map_df.drop_duplicates(subset=\"MasterID\")\n",
         "map_df.drop(['Reflectance', 'Wavelength', 'UniqueID', 'FID'], axis=1, inplace=True)\n",
         "map_df = map_df.reset_index()\n",
-        "\n",
-        "Map.add_points_from_xy(map_df, x=\"Long\", y=\"Lat\")\n",
-        "\n",
-        "Map"
+        "\n"
       ],
       "metadata": {
         "cellView": "form",
