--- a/GHISA_Visualization.ipynb
+++ b/GHISA_Visualization.ipynb
@@ -146,6 +146,8 @@
         "import geoviews as gv\n",
         "import panel as pn\n",
         "\n",
+        "print(\"Loading ASD / Hyperion data...\")\n",
+        "\n",
         "#Begin importing data\n",
         "core_data = pd.read_csv(r'https://raw.githubusercontent.com/rmccormick-contractor/Hyperion-ASD-Visualization/main/Croplands_DataViz/asd_long.csv',\n",
         "                     low_memory=False, index_col=False, na_values='NaN')\n",
@@ -191,7 +193,39 @@
         "core_data = pd.concat([core_data, new_df12])\n",
         "core_data = pd.concat([core_data, new_df13])\n",
         "\n",
+        "new_df14 = pd.read_csv(r'https://raw.githubusercontent.com/rmccormick-contractor/Hyperion-ASD-Visualization/main/Croplands_DataViz/Quemada_Daughtry_2016_long-1.csv',\n",
+        "                      low_memory=False, index_col=False, na_values='NaN')\n",
+        "new_df15 = pd.read_csv(r'https://raw.githubusercontent.com/rmccormick-contractor/Hyperion-ASD-Visualization/main/Croplands_DataViz/Quemada_Daughtry_2016_long-2.csv',\n",
+        "                      low_memory=False, index_col=False, na_values='NaN')\n",
+        "new_df16 = pd.read_csv(r'https://raw.githubusercontent.com/rmccormick-contractor/Hyperion-ASD-Visualization/main/Croplands_DataViz/Quemada_Daughtry_2016_long-3.csv',\n",
+        "                      low_memory=False, index_col=False, na_values='NaN')\n",
+        "new_df17 = pd.read_csv(r'https://raw.githubusercontent.com/rmccormick-contractor/Hyperion-ASD-Visualization/main/Croplands_DataViz/Quemada_Daughtry_2016_long-4.csv',\n",
+        "                      low_memory=False, index_col=False, na_values='NaN')\n",
+        "new_df18 = pd.read_csv(r'https://raw.githubusercontent.com/rmccormick-contractor/Hyperion-ASD-Visualization/main/Croplands_DataViz/Quemada_Daughtry_2016_long-5.csv',\n",
+        "                      low_memory=False, index_col=False, na_values='NaN')\n",
+        "new_df19 = pd.read_csv(r'https://raw.githubusercontent.com/rmccormick-contractor/Hyperion-ASD-Visualization/main/Croplands_DataViz/Quemada_Daughtry_2016_long-6.csv',\n",
+        "                      low_memory=False, index_col=False, na_values='NaN')\n",
+        "new_df20 = pd.read_csv(r'https://raw.githubusercontent.com/rmccormick-contractor/Hyperion-ASD-Visualization/main/Croplands_DataViz/Quemada_Daughtry_2016_long-7.csv',\n",
+        "                      low_memory=False, index_col=False, na_values='NaN')\n",
+        "\n",
+        "core_data2 = pd.concat([new_df14, new_df15])\n",
+        "core_data2 = pd.concat([core_data2, new_df16])\n",
+        "core_data2 = pd.concat([core_data2, new_df17])\n",
+        "core_data2 = pd.concat([core_data2, new_df18])\n",
+        "core_data2 = pd.concat([core_data2, new_df19])\n",
+        "core_data2 = pd.concat([core_data2, new_df20])\n",
+        "\n",
+        "core_data2.rename(columns={'Lon':'Long', 'GrowthStage':'Stage'}, inplace=True)\n",
+        "\n",
+        "core_data = pd.concat([core_data, core_data2])\n",
+        "\n",
+        "print(\"Loaded ASD / Hyperion data.\\n\")\n",
+        "\n",
+        "\n",
+        "\n",
         "core_data['Reflectance'] = core_data['Reflectance'].fillna(0)\n",
+        "\n",
+        "print(\"Loading DESIS data...\")\n",
         "\n",
         "# DESIS Data\n",
         "desis1_df = pd.read_csv(r'https://raw.githubusercontent.com/rmccormick-contractor/Hyperion-ASD-Visualization/main/Croplands_DataViz/GHISA-DESIS-Data/Part1-desis_ghisa_vis_long.csv',\n",
@@ -205,11 +239,15 @@
         "desis5_df = pd.read_csv(r'https://raw.githubusercontent.com/rmccormick-contractor/Hyperion-ASD-Visualization/main/Croplands_DataViz/GHISA-DESIS-Data/Part5-desis_ghisa_vis_long.csv',\n",
         "                     low_memory=False, index_col=False, na_values='NaN')\n",
         "\n",
+        "print(\"Loaded DESIS data.\\n\")\n",
+        "\n",
         "core_data = pd.concat([core_data, desis1_df])\n",
         "core_data = pd.concat([core_data, desis2_df])\n",
         "core_data = pd.concat([core_data, desis3_df])\n",
         "core_data = pd.concat([core_data, desis4_df])\n",
         "core_data = pd.concat([core_data, desis5_df])\n",
+        "\n",
+        "print(\"Loading PRISMA data...\")\n",
         "\n",
         "#PRISMA Data\n",
         "prisma1_df = pd.read_csv(r'https://raw.githubusercontent.com/rmccormick-contractor/Hyperion-ASD-Visualization/main/Croplands_DataViz/GHISA-PRISMA-Data/Part1-prisma_ghisa_vis_long.csv',\n",
@@ -224,6 +262,7 @@
         "\n",
         "core_data = pd.concat([core_data, prisma_df])\n",
         "\n",
+        "print(\"Loaded PRISMA data.\\n\\n\")\n",
         "\n",
         "# Drop unnessary index column\n",
         "core_data = core_data.drop(core_data.iloc[:, 0:1], axis=1)\n",
@@ -247,7 +286,10 @@
         "core_data['Year'] = core_data['Year'].fillna(2011)\n",
         "core_data['Year'] = core_data['Year'].astype(int);\n",
         "\n",
-        "core_data = core_data.convert_dtypes()\n"
+        "core_data['Sensor'] = core_data['Sensor'].replace(['ASD'], 'ASD Spectroradiometer')\n",
+        "\n",
+        "core_data = core_data.convert_dtypes()\n",
+        "print(\"All data ready.\")\n"
       ]
     },
     {
@@ -576,9 +618,11 @@
         "\n",
         "#\n",
         "#replace values in 'column1' that are greater than 10 with 20\n",
-        "new_df.loc[new_df['diff'] > 100, 'Reflectance'] = pd.NA\n",
+        "new_df.loc[new_df['diff'] > 25, 'Reflectance'] = pd.NA\n",
         "new_df['diff'] = new_df['diff'].shift(1)\n",
-        "new_df.loc[new_df['diff'] > 100, 'Reflectance'] = pd.NA\n",
+        "new_df.loc[new_df['diff'] > 25, 'Reflectance'] = pd.NA\n",
+        "\n",
+        "new_df.loc[new_df['Reflectance']>100, 'Reflectance'] = pd.NA\n",
         "\n",
         "original_data = original_data.drop(['diff'], axis=1)\n",
         "\n",
@@ -879,14 +923,14 @@
         "pivot_table = new_df.drop_duplicates(subset=[\"MasterID\"], keep='last')\n",
         "\n",
         "f = folium.Figure(width=1200, height=600)\n",
-        "map = folium.Map( location=[20,0], tiles = 'OpenStreetMap', zoom_start=2, min_zoom =2 ).add_to(f)\n",
+        "map_view = folium.Map( location=[20,0], tiles = 'OpenStreetMap', zoom_start=2, min_zoom =2 ).add_to(f)\n",
         "\n",
         "pivot_table = pivot_table.dropna(subset=[\"Long\"])\n",
         "\n",
         "for i,r in pivot_table.iterrows():\n",
         "    folium.Marker(location=[r['Lat'], r['Long']],\n",
         "                  popup = r['Crop'] + \": Captured by \" +str(r['Sensor']) + \" on \" + str(r['Month']) + \", \" + str(r['Year'])\n",
-        "                  ).add_to(map)\n",
+        "                  ).add_to(map_view)\n",
         "\n",
         "\n",
         "f"
